--- a/swapi_neo4j.org
+++ b/swapi_neo4j.org
@@ -36,7 +36,7 @@ CREATE (n:Vehicles)
 SET n=row
 #+end_src
 
-### Borrar nodos sin nombre ( suponer que eso significa que son nulos )
+*** Borrar nodos sin nombre ( suponer que eso significa que son nulos )
 
 #+begin_src cypher
 match (n:Starships) WHERE NOT (EXISTS (n.name)) DETACH DELETE n
@@ -50,9 +50,9 @@ match (n:Vehicles) WHERE NOT (EXISTS (n.name)) DETACH DELETE n
 match (n:People) WHERE NOT (EXISTS (n.name)) DETACH DELETE n
 #+end_src
 
-# Establecer relaciones 
+*** Establecer relaciones 
 
-### People -> Planets
+*** People -> Planets
 
 #+begin_src cypher
 MATCH (p:People),(pl: Planets)
@@ -60,7 +60,7 @@ WHERE p.homeworld = pl.url
 CREATE (p)-[:IS_FROM]->(pl)
 #+end_src
 
-### People -> Species
+*** People -> Species
 
 #+begin_src cypher
 match (p:People) set p.species = replace(p.species, '[', '') 
@@ -80,9 +80,9 @@ WHERE p.species = s.name
 CREATE (p)-[:IS]->(s)
 #+end_src
 
-### People -> Films
+*** People -> Films
 
-#### Limpiar los datos, pasar los datos necesarios a listas
+*** Limpiar los datos, pasar los datos necesarios a listas
 
 #+begin_src cypher
 match (p:People) set p.films = replace(p.films, '[', '') 
@@ -102,7 +102,7 @@ where f.url in p.films
 create (p)-[:APPEARS_IN]->(f)
 #+end_src
 
-### People -> Starships 
+*** People -> Starships 
 
 #+begin_src cypher
 match (p:People) set p.starships = replace(p.starships, '[', '') 
@@ -126,7 +126,7 @@ where s.url in p.starships
 create (p)-[:PILOTS]->(s)
 #+end_src
 
-### People -> Vehicles
+*** People -> Vehicles
 
 #+begin_src cypher
 match (p:People) set p.vehicles = replace(p.vehicles, '[', '') 
@@ -150,7 +150,7 @@ where v.url in p.vehicles
 create (p)-[:DRIVES]->(v)
 #+end_src
 
-### Starships -> Films
+*** Starships -> Films
 
 #+begin_src cypher
 match (s:Starships) set s.films = replace(s.films, '[', '') 
@@ -174,7 +174,7 @@ where f.url in s.films
 create (s)-[:APPEARS_IN]->(f)
 #+end_src
 
-### Vehicles -> Films
+*** Vehicles -> Films
 
 #+begin_src cypher
 match (v:Vehicles) set v.films = replace(v.films, '[', '') 
@@ -198,7 +198,7 @@ where f.url in v.films
 create (v)-[:APPEARS_IN]->(f)
 #+end_src
 
-### Planets -> Films
+*** Planets -> Films
 
 #+begin_src cypher
 match (p:Planets) set p.films = replace(p.films, '[', '') 
