--- a/swapi_neo4j.org
+++ b/swapi_neo4j.org
@@ -63,15 +63,8 @@ CREATE (p)-[:IS_FROM]->(pl)
 *** People -> Species
 
 #+begin_src cypher
-match (p:People) set p.species = replace(p.species, '[', '') 
-#+end_src
-
-#+begin_src cypher
-match (p:People) set p.species = replace(p.species, ']', '')
-#+end_src
-
-#+begin_src cypher
-match (p:People) set p.species = replace(p.species, '"', '') 
+match (p:People) set p.species = replace(p.species, '[', ''), p.films = replace(p.species, ']', ''),
+p.species = replace(p.species, '"', '')
 #+end_src
 
 #+begin_src cypher
@@ -85,19 +78,8 @@ CREATE (p)-[:IS]->(s)
 *** Limpiar los datos, pasar los datos necesarios a listas
 
 #+begin_src cypher
-match (p:People) set p.films = replace(p.films, '[', '') 
-#+end_src
-
-#+begin_src cypher
-match (p:People) set p.films = replace(p.films, ']', '') 
-#+end_src
-
-#+begin_src cypher
-match (p:People) set p.films = replace(p.films, '"', '') 
-#+end_src
-
-#+begin_src cypher
-match (p:People) set p.films = split(p.films, ',')
+match (p:People) set p.films = replace(p.films, '[', ''), p.films = replace(p.films, ']', ''), 
+p.films = replace(p.films, '"', ''), p.films=split(p.films, ",")
 #+end_src
 
 #+begin_src cypher
@@ -109,19 +91,8 @@ create (p)-[:APPEARS_IN]->(f)
 *** People -> Starships 
 
 #+begin_src cypher
-match (p:People) set p.starships = replace(p.starships, '[', '') 
-#+end_src
-
-#+begin_src cypher
-match (p:People) set p.starships = replace(p.starships, ']', '') 
-#+end_src
-
-#+begin_src cypher
-match (p:People) set p.starships = replace(p.starships, '"', '') 
-#+end_src
-
-#+begin_src cypher
-match (p:People) set p.starships = split(p.starships, ',')
+match (p:People) set p.starships = replace(p.starships, '[', ''), p.starships = replace(p.starships, ']', ''),
+p.starships = replace(p.starships, '"', ''), p.starships=split(p.starships, ",")
 #+end_src
 
 #+begin_src cypher
@@ -133,19 +104,8 @@ create (p)-[:PILOTS]->(s)
 *** People -> Vehicles
 
 #+begin_src cypher
-match (p:People) set p.vehicles = replace(p.vehicles, '[', '') 
-#+end_src
-
-#+begin_src cypher
-match (p:People) set p.vehicles = replace(p.vehicles, ']', '') 
-#+end_src
-
-#+begin_src cypher
-match (p:People) set p.vehicles = replace(p.vehicles, '"', '') 
-#+end_src
-
-#+begin_src cypher
-match (p:People) set p.vehicles = split(p.vehicles, ',') 
+match (p:People) set p.vehicles = replace(p.vehicles, '[', ''), p.vehicles = replace(p.vehicles, ']', ''),
+p.vehicles = replace(p.vehicles, '"', ''), p.vehicles=split(p.vehicles, ",")
 #+end_src
 
 #+begin_src cypher
@@ -157,19 +117,8 @@ create (p)-[:DRIVES]->(v)
 *** Starships -> Films
 
 #+begin_src cypher
-match (s:Starships) set s.films = replace(s.films, '[', '') 
-#+end_src
-
-#+begin_src cypher
-match (s:Starships) set s.films = replace(s.films, ']', '') 
-#+end_src
-
-#+begin_src cypher
-match (s:Starships) set s.films = replace(s.films, '"', '') 
-#+end_src
-
-#+begin_src cypher
-match (s:Starships) set s.films = split(s.films, ',') 
+match (s:Starships) set s.films = replace(s.films, '[', ''), s.films = replace(s.films, ']', ''),
+s.films = replace(s.films, '"', ''), s.films = split(s.films, ',') 
 #+end_src
 
 #+begin_src cypher
@@ -181,19 +130,8 @@ create (s)-[:APPEARS_IN]->(f)
 *** Vehicles -> Films
 
 #+begin_src cypher
-match (v:Vehicles) set v.films = replace(v.films, '[', '') 
-#+end_src
-
-#+begin_src cypher
-match (v:Vehicles) set v.films = replace(v.films, ']', '') 
-#+end_src
-
-#+begin_src cypher
-match (v:Vehicles) set v.films = replace(v.films, '"', '') 
-#+end_src
-
-#+begin_src cypher
-match (v:Vehicles) set v.films = split(v.films, ',') 
+match (v:Vehicles) set v.films = replace(v.films, '[', ''),  v.films = replace(v.films, ']', ''), 
+v.films = replace(v.films, '"', ''), v.films = split(v.films, ',') 
 #+end_src
 
 #+begin_src cypher
@@ -205,19 +143,8 @@ create (v)-[:APPEARS_IN]->(f)
 *** Planets -> Films
 
 #+begin_src cypher
-match (p:Planets) set p.films = replace(p.films, '[', '') 
-#+end_src
-
-#+begin_src cypher
-match (p:Planets) set p.films = replace(p.films, ']', '') 
-#+end_src
-
-#+begin_src cypher
-match (p:Planets) set p.films = replace(p.films, '"', '') 
-#+end_src
-
-#+begin_src cypher
-match (p:Planets) set p.films = split(p.films, ',') 
+match (p:Planets) set p.films = replace(p.films, '[', ''), p.films = replace(p.films, ']', '') , 
+p.films = replace(p.films, '"', ''), p.films = split(p.films, ',') 
 #+end_src
 
 #+begin_src cypher
