--- a/swapi_monetdb.org
+++ b/swapi_monetdb.org
@@ -45,10 +45,10 @@ homeworld varchar(60),
 films varchar(60),
 species varchar(60),
 starships varchar(60),
-vehicles varchar(60));
+vehicles varchar(60),
 created timestamp,
 edited timestamp,
-url varchar(60),
+url varchar(60));
 -- comando de inserción
 copy offset 2 into people from '/var/monetdb5/dbfarm/people.csv' on client using delimiters ',',E'\n',E'\"' null as '';
 #+end_src
