--- a/README.org
+++ b/README.org
@@ -4,17 +4,6 @@ Para este proyecto se utilizó la API de Star Wars gratuita llamada SWAPI, en la
 
 *** [[https://swapi.py4e.com/documentation][Api utilizada]]
 
-<link> https://ugeek.github.io/blog/post/2020-05-27-copiar-directorios-o-archivos-de-un-docker-a-local-o-viceversa.html
-
-
-Agregué al script de conv_csv la siguiente instrucción dentro de cada for: 
-docker cp ./$col.csv monetdb:/swapi_csv
-Para después poder ejecutar dentro de monet las siguientes instrucciones:
-Crear la tabla necesaria para cada una de las tablas 
-copy offset 2 into people from '/swapi_csv/people.csv' on client using delimiters ',',E'\n',E'\"' null as ' ';
-
-Nota: es importante checar la parte de los delimitadores todavía, porque las comas dentro de los arreglos están ocasionando serios problemas para copiar el csv a monet
-
 Agregué los comandos necesarios para crear la base de datos en neo4j 
 
 ** Mongo 
@@ -86,7 +75,8 @@ for table in list:
        #+begin_src js
               
        #+end_src
-              
+          
+*Nota: fue importante checar la parte de los delimitadores todavía, porque las comas dentro de los arreglos están ocasionando serios problemas para copiar el csv a monet o a neo
 ** Monetdb
 *** Carga de datos
 Los datos se sacarán de MongoDB.
@@ -108,6 +98,8 @@ Inserción de datos en el Docker
 #+begin_src sh
 docker cp people_monet.csv monetdb:/var/monetdb5/dbfarm/people.csv
 #+end_src
+Nota:[[https://ugeek.github.io/blog/post/2020-05-27-copiar-directorios-o-archivos-de-un-docker-a-local-o-viceversa.html]][Si se requiere ayuda para el copy a docker]
+
 Creación de la base en MonetDB
 #+begin_src sh
 monetdb create -p monetdb people
