--- a/README.org
+++ b/README.org
@@ -141,7 +141,7 @@ copy offset 2 into people from '/var/monetdb5/dbfarm/people.csv' on client using
        #+begin_src sql
        select p.name, count(distinct p.films) as cont from people p  group by p.name order by cont desc limit 10;
        #+end_src
-- Segundo Query, hacemos una consulta que nos indica las estadisticas
+- Segundo Query, hacemos una consulta que nos indica las estadísticas de masa, altura para cada color de piel. Además, no da el número de especies que tienen ese color de piel.
        #+begin_src sql
        select p.skin_color as skin_color, 
        min(distinct p.mass) as min_mass, avg(distinct p.mass) as avg_mass, max(distinct p.mass) as max_mass, sys.var_pop(distinct p.mass) as variance_mass,        
