--- a/README.org
+++ b/README.org
@@ -174,9 +174,17 @@ Para la importación de los datos dentro de Neo se utilizó el raw_path de cada 
 
 
 *** Queries Neo:
+- Primer Query, obtenemos un conteo de las especies de todos nuestros personajes
 
 #+begin_src cypher
 match (p:People)-[r]->(s:Species) 
 return s.name as especie, count(p.species) as conteo_especies 
 order by conteo_especies desc
+#+end_src
+
+- Segundo Query, obtenemos todas las películas en las que aparecen cada uno de los personajes
+
+#+begin_src cypher
+match (p:People)-[r]->(f:Films)  
+return p.name, collect(distinct f.title)
 #+end_src
