--- a/README.org
+++ b/README.org
@@ -67,12 +67,13 @@ for table in list:
        #+begin_src js
        db.people.aggregate([{$unwind:{path:"$films",preserveNullAndEmptyArrays: true}},{$unwind:{path:"$species",preserveNullAndEmptyArrays: true}},{$unwind:{path:"$vehicles",preserveNullAndEmptyArrays: true}},{$unwind:{path:"$starships",preserveNullAndEmptyArrays: true}},{$project:{_id:0}},{$out:"people_monet"}])
        #+end_src
-       - Segundo query:
+       - Segundo query: Obtener los planetas natales de todos los personajes
        #+begin_src js
        db.people.aggregate([ 
        {$project: {"_id":0, "name":1, "homeworld":1}}, 
        {$lookup: {from: "planets", localField: "homeworld", foreignField: "url", as: "planet"}},
-       {$project: {"name":1, "planet.name": 1}}])
+       {$project: {"name":1, "planet.name": 1}}
+       ])
        #+end_src
        - Tercer query:
        #+begin_src js
