--- a/README.org
+++ b/README.org
@@ -249,7 +249,7 @@ p.species = replace(p.species, '"', '')
 
 #+begin_src cypher
 MATCH (p:People),(s: Species)
-WHERE p.species = s.name
+WHERE p.species = s.url
 CREATE (p)-[:IS]->(s)
 #+end_src
 
