--- a/README.org
+++ b/README.org
@@ -169,7 +169,10 @@ count(distinct p.species) as num_species from people p where p.species is not NU
 /Nota/: Se considera que la batalla de Endor (última escena de esta película) ocurre 4 años después de la Batalla de Yavin (por eso se suman 4 años al birth_date que está calculado en años antes de la Batalla de Yavin) [[https://starwars.fandom.com/es/wiki/Calendario_Gal%C3%A1ctico_Est%C3%A1ndar]][Para sacar de dudas]
 
 #+begin_src sql
-select name, CAST(age as real)+4 as tot_age from (select name, years_alive as age from (select distinct(name), rtrim(birth_year, 'BBY') as years_alive from people where films='https://swapi.py4e.com/api/films/3/') as sbq1 where sbq1.years_alive<>'null') as sbq2 order by tot_age desc limit 10;
+select name, CAST(age as real)+4 as tot_age from 
+(select name, years_alive as age from (select distinct(name), rtrim(birth_year, 'BBY') as years_alive 
+from people where films='https://swapi.py4e.com/api/films/3/') as sbq1 where sbq1.years_alive<>'null') as sbq2 
+order by tot_age desc limit 10;
 #+end_src
        
 ** Neo4j
